water levels and css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,15 @@
 
 
 <!--  navigation from https://v4-alpha.getbootstrap.com/components/navbar/ -->
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <a class="navbar-brand" href="#">Pegel Online Angular</a>
+<nav class="navbar navbar-toggleable-md navbar-inverse  bg-primary">
+
+    <a class="navbar-brand" routerLink="" routerLinkActive="active">Pegel Online Angular</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" routerLink="" routerLinkActive="">
-                Home
-                <span class="sr-only">(current)</span>
-            </a>
+
             <!-- The routerLink are static, no binding! -->
-            <a class="nav-item nav-link" routerLink="stations" routerLinkActive="active">Stations</a>
-            <a class="nav-item nav-link" routerLink="waters" routerLinkActive="active">Waters</a>
+            <a class="nav-item nav-link" routerLink="waters" routerLinkActive="active">Gewässer</a>
+            <a class="nav-item nav-link" routerLink="stations" routerLinkActive="active">Messstellen</a>
         </div>
     </div>
 </nav>
