--- a/src/app/waters-table/waters-table.component.html
+++ b/src/app/waters-table/waters-table.component.html
@@ -1,23 +1,22 @@
-<h3>Waters</h3>
+<h3>Gewässer</h3>
 
-<table class="table  table-striped  table-hover  table-sm">
+<table class="table  table-striped table-hover table-sm">
     <thead class="thead-default">
         <tr>
             <th>#</th>
-            <th>Short Name</th>
-            <th>Long Name</th>
+            <th>Name</th>
             <th>
         </tr>
     </thead>
     <tbody>
         <tr class="" *ngFor="let water of waters; let i = index">
-            <th scope="row">{{i}}</th>
-            <td>{{water.shortname}}</td>
+            <th scope="row">{{i +1}}</th>
             <td>{{water.longname}}</td>
             <!-- view the stations for the water -->
             <!-- the routerlink adds a query paramter (by {} literal) like /stations;water=abc  -->
-            <td><button type="button" class="btn btn-info"
-                    [routerLink]="['/stations', { 'water': water.shortname}]">Stations</button></td>
+            <td>
+                <button type="button" class="btn btn-info  btn-sm" [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</button>
+            </td>
         </tr>
     </tbody>
 </table>
