--- a/src/app/waters-table/waters-table.component.html
+++ b/src/app/waters-table/waters-table.component.html
@@ -15,7 +15,7 @@
             <!-- view the stations for the water -->
             <!-- the routerlink adds a query paramter (by {} literal) like /stations;water=abc  -->
             <td>
-                <button type="button" class="btn btn-info  btn-sm" [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</button>
+                <a class="btn btn-info btn-sm" [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</a>
             </td>
         </tr>
     </tbody>
