--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-
-
 <!--  navigation from https://v4-alpha.getbootstrap.com/components/navbar/ -->
 <nav class="navbar navbar-toggleable-md navbar-inverse  bg-primary">
 
@@ -14,7 +12,9 @@
     </div>
 </nav>
 
-
+<div class="container">
+<poa-messages></poa-messages>
+</div>
 <div class="container">
     <div class="row">
         <div class="col">
