--- a/src/app/stations-table/stations-table.component.html
+++ b/src/app/stations-table/stations-table.component.html
@@ -1,8 +1,7 @@
-
 <!--  center heading and add some padding top and bottom  -->
 <h3 *ngIf="water" class="pt-5 pb-5 text-center">Pegel für {{water}}</h3>
 
-<table class="table  table-striped  table-hover  table-sm">
+<table class="table  table-striped table-hover table-sm">
     <thead class="thead-default">
         <tr>
             <th>#</th>
@@ -19,10 +18,7 @@
             <td>{{station.water.longname}}</td>
             <td>{{station.km}}</td>
             <td>
-                <button type="button" class="btn btn-info btn-sm" [routerLink]="['/station','level',station.shortname]">Pegel</button>
-                <!-- 
-            
-             -->
+                <a class="btn btn-info btn-sm" [routerLink]="['/station','level',station.shortname]">Pegel</a>
             </td>
         </tr>
     </tbody>
