--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 </nav>
 
 <div class="container">
-<poa-messages></poa-messages>
+    <poa-messages></poa-messages>
 </div>
 <div class="container">
     <div class="row">
@@ -22,3 +22,6 @@
         </div>
     </div>
 </div>
+
+<poa-navigation-loading-overlay></poa-navigation-loading-overlay>
+
