--- a/src/app/poa/waters-table/waters-table.component.html
+++ b/src/app/poa/waters-table/waters-table.component.html
@@ -3,20 +3,47 @@
 <table class="table  table-striped table-hover table-sm">
     <thead class="thead-default">
         <tr>
-            <th>#</th>
-            <th>Name</th>
+            <th class="pl-2">Name</th>
             <th>
         </tr>
     </thead>
     <tbody>
-        <tr class="" *ngFor="let water of waters; let i = index">
-            <th scope="row">{{i +1}}</th>
-            <td>{{water.longname}}</td>
+        <tr class="" *ngFor="let water of waters">
+            <td class="pl-2">{{water.longname}}</td>
             <!-- view the stations for the water -->
             <!-- the routerlink adds a query paramter (by {} literal) like /stations;water=abc  -->
-            <td>
-                <a class="btn btn-info btn-sm" [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</a>
+            <td class="pr-3">
+                <a class="btn btn-info btn-sm pull-right" [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</a>
             </td>
         </tr>
     </tbody>
 </table>
+
+<!-- https://github.com/angular/angular/issues/7294 : href="javascript:void(0);" -->
+<!--  https://v4-alpha.getbootstrap.com/components/pagination/ -->
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <li class="page-item" [class.disabled]="!hasPreviousPage()">
+            <a class="page-link" href="javascript:void(0);" aria-label="Previous" (click)="previousPage()">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        <li class="page-item" *ngIf="hasPreviousPage()">
+            <a class="page-link" href="javascript:void(0);" (click)="gotoPage(currentPage -1 )">{{currentPage}}</a>
+        </li>
+        <li class="page-item active">
+            <a class="page-link" href="javascript:void(0);">{{currentPage +1}}</a>
+        </li>
+        <li class="page-item" *ngIf="hasNextPage()">
+            <a class="page-link" href="javascript:void(0);" (click)="gotoPage(currentPage + 1)">{{currentPage +2}}</a>
+        </li>
+        
+        <li class="page-item" [class.disabled]="!hasNextPage()">
+            <a class="page-link" href="javascript:void(0);" aria-label="Next" (click)="nextPage()">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+            </a>
+        </li>
+    </ul>
+</nav>
