--- a/src/app/poa/waters-table/waters-table.component.html
+++ b/src/app/poa/waters-table/waters-table.component.html
@@ -19,4 +19,5 @@
     </tbody>
 </table>
 
-<poa-paginator></poa-paginator>
+<!-- pass fixed value to linesPerPage: no binding necessary -->
+<poa-paginator linesPerPage="7"></poa-paginator>
