--- a/src/app/poa/waters-table/waters-table.component.html
+++ b/src/app/poa/waters-table/waters-table.component.html
@@ -3,12 +3,19 @@
 <table class="table  table-striped table-hover table-sm">
     <thead class="thead-default">
         <tr>
-            <th class="pl-2">Name</th>
+            <!-- role="button" makes mouse pointer -->
+            <th class="pl-2 sorting_desc" role="button" (click)="changeSortOrder('longname')">
+                Name
+                <i class="fa"  aria-hidden="true"
+                    [class.fa-sort-alpha-asc]="sortAscending && sortProperty == 'longname'"
+                    [class.fa-sort-alpha-desc]="!sortAscending  && sortProperty == 'longname'" 
+                    [class.fa-sort]="sortProperty != 'longname'"></i>
+            </th>
             <th>
         </tr>
     </thead>
     <tbody>
-        <tr class="" *ngFor="let water of waters">
+        <tr *ngFor="let water of data">
             <td class="pl-2">{{water.longname}}</td>
             <!-- view the stations for the water -->
             <!-- the routerlink adds a query paramter (by {} literal) like /stations;water=abc  -->
@@ -20,4 +27,4 @@
 </table>
 
 <!-- pass fixed value to linesPerPage: no binding necessary -->
-<poa-paginator linesPerPage="7"></poa-paginator>
+<poa-paginator></poa-paginator>
