--- a/src/app/shared/paginator/paginator.component.html
+++ b/src/app/shared/paginator/paginator.component.html
@@ -3,26 +3,28 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination">
         <li class="page-item" [class.disabled]="!hasPreviousPage()">
-            <a class="page-link" href="javascript:void(0);" aria-label="Previous" (click)="previousPage()">
+            <!-- role="button" make mouse cursor to a pointer -->
+            <div class="page-link" role="button" aria-label="Previous" (click)="previousPage()">
                 <span aria-hidden="true">&laquo;</span>
                 <span class="sr-only">Previous</span>
-            </a>
+            </div>
         </li>
         <li class="page-item" *ngIf="hasPreviousPage()">
-            <a class="page-link" href="javascript:void(0);" (click)="gotoPage(currentPage -1 )">{{currentPage}}</a>
+            <div class="page-link" role="button" (click)="gotoPage(currentPage -1 )">{{currentPage - 1}}</div>
         </li>
         <li class="page-item active">
-            <a class="page-link" href="javascript:void(0);">{{currentPage +1}}</a>
+            <!-- current selected page:  not clickable -->
+            <div class="page-link">{{currentPage}}</div>
         </li>
         <li class="page-item" *ngIf="hasNextPage()">
-            <a class="page-link" href="javascript:void(0);" (click)="gotoPage(currentPage + 1)">{{currentPage +2}}</a>
+            <div class="page-link" role="button" (click)="gotoPage(currentPage + 1)">{{currentPage + 1}}</div>
         </li>
-        
+
         <li class="page-item" [class.disabled]="!hasNextPage()">
-            <a class="page-link" href="javascript:void(0);" aria-label="Next" (click)="nextPage()">
+            <div class="page-link" role="button" aria-label="Next" (click)="nextPage()">
                 <span aria-hidden="true">&raquo;</span>
                 <span class="sr-only">Next</span>
-            </a>
+            </div>
         </li>
     </ul>
 </nav>
