--- a/src/app/poa/stations-table/stations-table.component.html
+++ b/src/app/poa/stations-table/stations-table.component.html
@@ -1,33 +1,38 @@
-<!--  center heading and add some padding top and bottom  -->
-<h3 *ngIf="water" class="pt-5 pb-5 text-center">Pegel für {{water}}</h3>
+<div class="row">
+    <div class="col">
 
-<table class="table  table-striped table-hover table-sm">
-    <thead class="thead-default">
-        <tr class="row">
-        <!--  set the column width fixed. Has to be done also in the tbody area? -->
-            <th class="col-sm-5">
-                <poa-table-sorter property="longname">Name</poa-table-sorter>
-            </th>
-            <th class="col-sm-4">
-                <poa-table-sorter property="water.longname" initialActive="true">Gewässer</poa-table-sorter>
-            </th>
-            <th class="col-sm-2">
-                <poa-table-sorter property="km" initialActive="true">Flusskilomenter</poa-table-sorter>
-            </th>
-            <th class="col-sm-1"></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let station of data" class="row">
-            <td class="col-sm-5">{{station.longname}}</td>
-            <td class="col-sm-4">{{station.water.longname}}</td>
-            <td class="col-sm-2">{{station.km}}</td>
-            <td class="col-sm-1">
-                <a class="btn btn-info btn-sm pull-right" [routerLink]="['/station','level',station.shortname]">Pegel</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+        <!--  center heading and add some padding top and bottom  -->
+        <h3 *ngIf="water" class="pt-5 pb-5 text-center">Messstellen für das Gewässer {{water}}</h3>
 
-<!-- pass fixed value to linesPerPage: no binding necessary -->
-<poa-paginator linesPerPage="15"></poa-paginator>
+        <table class="table  table-striped table-hover table-sm">
+            <thead class="thead-default">
+                <tr class="row">
+                    <!--  set the column width fixed. Has to be done also in the tbody area? -->
+                    <th class="col-sm-5">
+                        <poa-table-sorter property="longname">Name</poa-table-sorter>
+                    </th>
+                    <th class="col-sm-4">
+                        <poa-table-sorter property="water.longname" initialActive="true">Gewässer</poa-table-sorter>
+                    </th>
+                    <th class="col-sm-2">
+                        <poa-table-sorter property="km" initialActive="true">Flusskilomenter</poa-table-sorter>
+                    </th>
+                    <th class="col-sm-1"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let station of data" class="row">
+                    <td class="col-sm-5">{{station.longname}}</td>
+                    <td class="col-sm-4">{{station.water.longname}}</td>
+                    <td class="col-sm-2">{{station.km}}</td>
+                    <td class="col-sm-1">
+                        <a class="btn btn-info btn-sm pull-right" [routerLink]="['/station','level',station.shortname]">Pegel</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!-- pass fixed value to linesPerPage: no binding necessary -->
+        <poa-paginator linesPerPage="15"></poa-paginator>
+    </div>
+</div>
