--- a/src/app/poa/waters-table/waters-table.component.html
+++ b/src/app/poa/waters-table/waters-table.component.html
@@ -1,30 +1,35 @@
-<h3>Gewässer</h3>
+<div class="row">
+    <div class="col">
+        <h3>Gewässer</h3>
 
-<table class="table  table-striped table-hover table-sm">
-    <thead class="thead-default">
-        <tr>
-            <!-- role="button" makes mouse pointer -->
-            <th class="pl-2 sorting_desc" role="button" (click)="changeSortOrder('longname')">
-                Name
-                <i class="fa"  aria-hidden="true"
-                    [class.fa-sort-alpha-asc]="sortAscending && sortProperty == 'longname'"
-                    [class.fa-sort-alpha-desc]="!sortAscending  && sortProperty == 'longname'" 
-                    [class.fa-sort]="sortProperty != 'longname'"></i>
-            </th>
-            <th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let water of data">
-            <td class="pl-2">{{water.longname}}</td>
-            <!-- view the stations for the water -->
-            <!-- the routerlink adds a query paramter (by {} literal) like /stations;water=abc  -->
-            <td class="pr-3">
-                <a class="btn btn-info btn-sm pull-right" [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+        <table class="table  table-striped table-hover table-sm">
+            <thead class="thead-default">
+                <tr>
+                    <!-- role="button" makes mouse pointer -->
+                    <th class="pl-2 sorting_desc" role="button" (click)="changeSortOrder('longname')">
+                        Name
+                        <i class="fa" aria-hidden="true"
+                            [class.fa-sort-alpha-asc]="sortAscending && sortProperty == 'longname'"
+                            [class.fa-sort-alpha-desc]="!sortAscending  && sortProperty == 'longname'"
+                            [class.fa-sort]="sortProperty != 'longname'"></i>
+                    </th>
+                    <th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let water of data">
+                    <td class="pl-2">{{water.longname}}</td>
+                    <!-- view the stations for the water -->
+                    <!-- the routerlink adds a query paramter (by {} literal) like /stations;water=abc  -->
+                    <td class="pr-3">
+                        <a class="btn btn-info btn-sm pull-right"
+                            [routerLink]="['/stations', { 'water': water.shortname}]">Messstellen</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-<!-- pass fixed value to linesPerPage: no binding necessary -->
-<poa-paginator></poa-paginator>
+        <!-- pass fixed value to linesPerPage: no binding necessary -->
+        <poa-paginator></poa-paginator>
+    </div>
+</div>
