--- a/src/app/poa/water-level/water-level.component.html
+++ b/src/app/poa/water-level/water-level.component.html
@@ -3,38 +3,42 @@
 
 <div class="row pb-2">
     <div class="col-1">
-        <!--  the faSearch is a dynamic property (not in the component) -->
+        <!--  the faSearch coluld be a dynamic property (not in the component) -->
         <span class="btn btn-primary" href="#navigation-main" aria-label="Open Search" (click)="faSearch = !faSearch">
             <i class="fa fa-search" aria-hidden="true"></i>
         </span>
     </div>
+    
     <div class="col-11 collapse" [class.show]="faSearch" id="collapseExample">
-        <form [formGroup]="searchForm" class="form-inline">
+        <form [formGroup]="searchForm" class="form-inline" (ngSubmit)="onSubmit()" novalidate>
 
-            <label class="col-form-label mr-sm-4">Zeitraum</label>
+            <label class="col-form-label mr-sm-4 col-1">Zeitraum</label>
+            <div class="col-2 row" [class.has-danger]="formErrors.days">
+                <label class="col-form-label mr-sm-2 col-3" for="days">Tage</label>
+                <input type="text" class="form-control mr-sm-4 col-6" id="days" formControlName="days" maxlength="3">
+            </div>
 
-            <label class="col-form-label mr-sm-2" for="days">Tage</label>
-            <!--  [(ngModel)] two way binding. Do not forget the name attribute! -->
-            <input type="text" class="form-control mr-sm-4 col-1" id="days" formControlName="days">
-
-            <label class="col-form-label mr-sm-2" for="hours">Stunden</label>
-            <input type="number" class="form-control  col-1" id="hours" formControlName="hours" maxlength="2">
-
-            <button type="button" class="btn btn-primary ml-sm-2" [class.disabled]="!searchForm.valid" (click)="onSubmit()">Laden</button>
+            <div class="col-2 row" [class.has-danger]="formErrors.hours">
+                <label class="col-form-label mr-sm-2 col-5" for="hours">Stunden</label>
+                <input type="text" class="form-control col-6" id="hours" formControlName="hours">
+            </div>
+            <button type="submit" class="btn btn-primary ml-sm-2" [class.disabled]="!searchForm.valid">Laden</button>
         </form>
-      
-        <div *ngIf="formErrors.days" class="alert alert-danger">{{ formErrors.days }}</div>
+
+        <div *ngIf="formErrors.days || formErrors.hours" class="alert alert-danger mt-2">
+            <div>{{ formErrors.days }}</div>
+            <div>{{ formErrors.hours }}</div>
+        </div>
 
     </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="waterLevels">
     <div class="col">
-
         <table class="table  table-striped table-hover table-sm">
             <thead class="thead-default">
                 <tr>
-                    <th>Datum</th>
+                    <th> <poa-table-sorter property="timestamp">Datum</poa-table-sorter></th>
                     <th>Pegel (cm)</th>
                 </tr>
             </thead>
